// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactInspect component should render properly if data is a function 1`] = `
<styled.pre>
  <styled.span
    type="function"
  >
    function fun(a) {
  var b = 2;

  console.log('foooooo');
  return a + b;
}
  </styled.span>
</styled.pre>
`;

exports[`ReactInspect component should render properly if data is a number 1`] = `
<styled.pre>
  <styled.span
    type="number"
  >
    666
  </styled.span>
</styled.pre>
`;

exports[`ReactInspect component should render properly if data is a string 1`] = `
<styled.pre>
  <styled.span
    type="string"
  >
    "
    cawabongaaa!
    "
  </styled.span>
</styled.pre>
`;

exports[`ReactInspect component should render properly if data is an array 1`] = `
<styled.pre>
  <styled.span>
    [
  </styled.span>
  <styled.div>
    <styled.span
      type="keyword"
    >
      undefined
    </styled.span>
  </styled.div>
  <styled.div>
    <styled.span
      type="keyword"
    >
      null
    </styled.span>
  </styled.div>
  <styled.div>
    <styled.span
      type="number"
    >
      666
    </styled.span>
  </styled.div>
  <styled.div>
    <styled.span
      type="string"
    >
      "
      cawabongaaa!
      "
    </styled.span>
  </styled.div>
  <styled.div>
    <styled.span
      type="function"
    >
      function fun(a) {
  var b = 2;

  console.log('foooooo');
  return a + b;
}
    </styled.span>
  </styled.div>
  <styled.span>
    ]
  </styled.span>
</styled.pre>
`;

exports[`ReactInspect component should render properly if data is an object 1`] = `
<styled.pre>
  <styled.span>
    {
  </styled.span>
  <styled.div>
    <styled.span>
      und
    </styled.span>
    <styled.span>
      :
    </styled.span>
     
    <styled.span
      type="keyword"
    >
      undefined
    </styled.span>
  </styled.div>
  <styled.div>
    <styled.span>
      nil
    </styled.span>
    <styled.span>
      :
    </styled.span>
     
    <styled.span
      type="keyword"
    >
      null
    </styled.span>
  </styled.div>
  <styled.div>
    <styled.span>
      num
    </styled.span>
    <styled.span>
      :
    </styled.span>
     
    <styled.span
      type="number"
    >
      666
    </styled.span>
  </styled.div>
  <styled.div>
    <styled.span>
      str
    </styled.span>
    <styled.span>
      :
    </styled.span>
     
    <styled.span
      type="string"
    >
      "
      cawabongaaa!
      "
    </styled.span>
  </styled.div>
  <styled.div>
    <styled.span>
      fun
    </styled.span>
    <styled.span>
      :
    </styled.span>
     
    <styled.span
      type="function"
    >
      function fun(a) {
  var b = 2;

  console.log('foooooo');
  return a + b;
}
    </styled.span>
  </styled.div>
  <styled.div>
    <styled.span>
      arr
    </styled.span>
    <styled.span>
      :
    </styled.span>
     
    <span>
      <styled.span>
        [
      </styled.span>
      <styled.div>
        <styled.span
          type="keyword"
        >
          undefined
        </styled.span>
      </styled.div>
      <styled.div>
        <styled.span
          type="keyword"
        >
          null
        </styled.span>
      </styled.div>
      <styled.div>
        <styled.span
          type="number"
        >
          666
        </styled.span>
      </styled.div>
      <styled.div>
        <styled.span
          type="string"
        >
          "
          cawabongaaa!
          "
        </styled.span>
      </styled.div>
      <styled.div>
        <styled.span
          type="function"
        >
          function fun(a) {
  var b = 2;

  console.log('foooooo');
  return a + b;
}
        </styled.span>
      </styled.div>
      <styled.span>
        ]
      </styled.span>
    </span>
  </styled.div>
  <styled.div>
    <styled.span>
      obj
    </styled.span>
    <styled.span>
      :
    </styled.span>
     
    <span>
      <styled.span>
        {
      </styled.span>
      <styled.div>
        <styled.span>
          und
        </styled.span>
        <styled.span>
          :
        </styled.span>
         
        <styled.span
          type="keyword"
        >
          undefined
        </styled.span>
      </styled.div>
      <styled.div>
        <styled.span>
          nil
        </styled.span>
        <styled.span>
          :
        </styled.span>
         
        <styled.span
          type="keyword"
        >
          null
        </styled.span>
      </styled.div>
      <styled.div>
        <styled.span>
          num
        </styled.span>
        <styled.span>
          :
        </styled.span>
         
        <styled.span
          type="number"
        >
          666
        </styled.span>
      </styled.div>
      <styled.div>
        <styled.span>
          str
        </styled.span>
        <styled.span>
          :
        </styled.span>
         
        <styled.span
          type="string"
        >
          "
          cawabongaaa!
          "
        </styled.span>
      </styled.div>
      <styled.div>
        <styled.span>
          fun
        </styled.span>
        <styled.span>
          :
        </styled.span>
         
        <styled.span
          type="function"
        >
          function fun(a) {
  var b = 2;

  console.log('foooooo');
  return a + b;
}
        </styled.span>
      </styled.div>
      <styled.div>
        <styled.span>
          arr
        </styled.span>
        <styled.span>
          :
        </styled.span>
         
        <span>
          <styled.span>
            [
          </styled.span>
          <styled.div>
            <styled.span
              type="keyword"
            >
              undefined
            </styled.span>
          </styled.div>
          <styled.div>
            <styled.span
              type="keyword"
            >
              null
            </styled.span>
          </styled.div>
          <styled.div>
            <styled.span
              type="number"
            >
              666
            </styled.span>
          </styled.div>
          <styled.div>
            <styled.span
              type="string"
            >
              "
              cawabongaaa!
              "
            </styled.span>
          </styled.div>
          <styled.div>
            <styled.span
              type="function"
            >
              function fun(a) {
  var b = 2;

  console.log('foooooo');
  return a + b;
}
            </styled.span>
          </styled.div>
          <styled.span>
            ]
          </styled.span>
        </span>
      </styled.div>
      <styled.span>
        }
      </styled.span>
    </span>
  </styled.div>
  <styled.span>
    }
  </styled.span>
</styled.pre>
`;

exports[`ReactInspect component should render properly if data is null 1`] = `
<styled.pre>
  <styled.span
    type="keyword"
  >
    null
  </styled.span>
</styled.pre>
`;

exports[`ReactInspect component should render properly if data is undefined 1`] = `
<styled.pre>
  <styled.span
    type="keyword"
  >
    undefined
  </styled.span>
</styled.pre>
`;
